Removed warnings (missing view and some of network)